--- a/index.html
+++ b/index.html
@@ -34,6 +34,39 @@
     <!-- end of header  -->
 
     <!-- about section -->
+    <section class="section" id="about">
+      <!-- title -->
+      <div class="section-title">
+        <h2>about <span>us</span></h2>
+      </div>
+      <!-- end of title -->
+
+      <div class="section-center about-center">
+        <!-- about image wrapper -->
+        <article class="about-image">
+          <img
+            src="./images/about.jpeg"
+            alt="awesome beach"
+            class="about-photo"
+          />
+        </article>
+        <!-- about info -->
+        <article class="about-info">
+          <h3>explore the difference</h3>
+          <p>
+            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Excepturi
+            eligendi placeat necessitatibus odit dolor ipsam repudiandae rem
+            eius saepe facilis!
+          </p>
+          <p>
+            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Adipisci,
+            est repellat placeat corrupti sapiente reprehenderit debitis
+            repudiandae labore sit vero!
+          </p>
+          <a href="#" class="btn">read more</a>
+        </article>
+      </div>
+    </section>
     <!-- end of about section -->
 
     <!-- services -->
