--- a/index.html
+++ b/index.html
@@ -35,11 +35,11 @@
 
     <!-- about section -->
     <section class="section" id="about">
-      <!-- title -->
+      <!-- section title -->
       <div class="section-title">
         <h2>about <span>us</span></h2>
       </div>
-      <!-- end of title -->
+      <!-- end of section title -->
 
       <div class="section-center about-center">
         <!-- about image wrapper -->
@@ -70,6 +70,59 @@
     <!-- end of about section -->
 
     <!-- services -->
+    <section class="section services" id="services">
+      <!-- section title -->
+      <div class="section-title">
+        <h2>our <span>services</span></h2>
+      </div>
+      <!-- end of section title -->
+      <div class="section-center services-center">
+        <!-- service -->
+        <article class="service">
+          <span class="service-icon"><i class="fas fa-wallet fa-fw"></i></span>
+          <!-- service-info -->
+          <div class="service-info">
+            <h4 class="service-title">saving money</h4>
+            <p class="service-text">
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Alias
+              quis cumque incidunt facilis, suscipit asperiores!
+            </p>
+          </div>
+          <!-- end of service-info -->
+        </article>
+        <!-- end of service -->
+
+        <!-- service -->
+        <article class="service">
+          <span class="service-icon"><i class="fas fa-tree fa-fw"></i></span>
+          <!-- service-info -->
+          <div class="service-info">
+            <h4 class="service-title">endless hiking</h4>
+            <p class="service-text">
+              Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+              Inventore, animi explicabo laboriosam maxime sint exercitationem?
+            </p>
+          </div>
+          <!-- end of service-info -->
+        </article>
+        <!-- end of service -->
+
+        <!-- service -->
+        <article class="service">
+          <span class="service-icon"><i class="fas fa-socks fa-fw"></i></span>
+          <!-- service-info -->
+          <div class="service-info">
+            <h4 class="service-title">comforting socks</h4>
+            <p class="service-text">
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+              Reiciendis sint quaerat eius nemo odio officiis!
+            </p>
+          </div>
+          <!-- end of service-info -->
+        </article>
+        <!-- end of service -->
+      </div>
+    </section>
     <!--end services -->
 
     <!-- featured tours -->
