--- a/index.html
+++ b/index.html
@@ -5,21 +5,22 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Backroads || Tour Company</title>
-    <!-- favicon -->
+    <!-- Favicon -->
     <link rel="shortcut icon" href="./images/favicon.ico" type="image/x-icon" />
-    <!-- font-awesome -->
+    <!-- Font Awesome -->
     <link
       rel="stylesheet"
       href="./fontawesome-free-5.12.1-web/css/all.min.css"
     />
-    <!-- styles css -->
+    <!-- Styles CSS -->
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
-    <!-- header  -->
+    <!-- Header  -->
     <header id="home">
-      <!-- navbar -->
-      <!-- hero -->
+      <!-- Navbar -->
+
+      <!-- Hero -->
       <div class="hero">
         <div class="hero-banner">
           <h1>continue exploring</h1>
@@ -30,19 +31,21 @@
           <a href="#featured" class="btn hero-btn scroll-link">explore tours</a>
         </div>
       </div>
+      <!--End of Hero -->
     </header>
-    <!-- end of header  -->
+    <!-- End of Header  -->
 
-    <!-- about section -->
+    <!-- About Section -->
     <section class="section" id="about">
-      <!-- section title -->
+      <!-- Section Title -->
       <div class="section-title">
         <h2>about <span>us</span></h2>
       </div>
-      <!-- end of section title -->
+      <!-- End of Section Title -->
 
+      <!-- About Center -->
       <div class="section-center about-center">
-        <!-- about image wrapper -->
+        <!-- About Image Wrapper -->
         <article class="about-image">
           <img
             src="./images/about.jpeg"
@@ -50,7 +53,9 @@
             class="about-photo"
           />
         </article>
-        <!-- about info -->
+        <!-- End of About Image Wrapper -->
+
+        <!-- About Info -->
         <article class="about-info">
           <h3>explore the difference</h3>
           <p>
@@ -65,22 +70,29 @@
           </p>
           <a href="#" class="btn">read more</a>
         </article>
+        <!-- End of About Info -->
       </div>
+      <!-- End of About Center -->
     </section>
-    <!-- end of about section -->
+    <!-- End Of About Section -->
 
-    <!-- services -->
+    <!-- Services Section-->
     <section class="section services" id="services">
-      <!-- section title -->
+      <!-- Section Title -->
       <div class="section-title">
         <h2>our <span>services</span></h2>
       </div>
-      <!-- end of section title -->
+      <!-- End Of Section Title -->
+
+      <!-- Services -->
       <div class="section-center services-center">
-        <!-- service -->
+        <!-- Service -->
         <article class="service">
-          <span class="service-icon"><i class="fas fa-wallet fa-fw"></i></span>
-          <!-- service-info -->
+          <span class="service-icon">
+            <i class="fas fa-wallet fa-fw"></i>
+          </span>
+
+          <!-- Service Info -->
           <div class="service-info">
             <h4 class="service-title">saving money</h4>
             <p class="service-text">
@@ -88,14 +100,17 @@
               quis cumque incidunt facilis, suscipit asperiores!
             </p>
           </div>
-          <!-- end of service-info -->
+          <!-- End Of Service-Info -->
         </article>
-        <!-- end of service -->
+        <!-- End Of Service -->
 
-        <!-- service -->
+        <!-- Service -->
         <article class="service">
-          <span class="service-icon"><i class="fas fa-tree fa-fw"></i></span>
-          <!-- service-info -->
+          <span class="service-icon">
+            <i class="fas fa-tree fa-fw"></i>
+          </span>
+
+          <!-- Service-Info -->
           <div class="service-info">
             <h4 class="service-title">endless hiking</h4>
             <p class="service-text">
@@ -103,14 +118,17 @@
               Inventore, animi explicabo laboriosam maxime sint exercitationem?
             </p>
           </div>
-          <!-- end of service-info -->
+          <!-- End Of Service-Info -->
         </article>
-        <!-- end of service -->
+        <!-- End Of Service -->
 
-        <!-- service -->
+        <!-- Service -->
         <article class="service">
-          <span class="service-icon"><i class="fas fa-socks fa-fw"></i></span>
-          <!-- service-info -->
+          <span class="service-icon">
+            <i class="fas fa-socks fa-fw"></i>
+          </span>
+
+          <!-- Service-Info -->
           <div class="service-info">
             <h4 class="service-title">comforting socks</h4>
             <p class="service-text">
@@ -118,27 +136,28 @@
               Reiciendis sint quaerat eius nemo odio officiis!
             </p>
           </div>
-          <!-- end of service-info -->
+          <!-- End Of Service-Info -->
         </article>
-        <!-- end of service -->
+        <!-- End Of Service -->
       </div>
+      <!-- End of Services -->
     </section>
-    <!--end services -->
+    <!--End of Services Section -->
 
-    <!-- featured tours -->
-    <!-- end of featured tours -->
+    <!-- Featured Tours Section -->
+    <!-- End Of Featured Tours Section -->
 
-    <!-- contact -->
+    <!-- Contact Section -->
 
-    <!-- end of contact -->
+    <!-- End Of Contact Section -->
 
-    <!-- gallery  -->
+    <!-- Gallery Section  -->
 
-    <!-- end of gallery  -->
+    <!-- End Of Gallery Section -->
 
-    <!-- footer -->
+    <!-- Footer Section -->
 
-    <!-- js -->
+    <!-- JS -->
     <script src="./js/app.js"></script>
   </body>
 </html>
