--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
       </div>
       <!-- End Of Section Title -->
 
-      <!-- Services -->
+      <!-- Services Center -->
       <div class="section-center services-center">
         <!-- Service -->
         <article class="service">
@@ -140,11 +140,178 @@
         </article>
         <!-- End Of Service -->
       </div>
-      <!-- End of Services -->
+      <!-- End of Services Center -->
     </section>
     <!--End of Services Section -->
 
     <!-- Featured Tours Section -->
+    <section class="section" id="featured">
+      <!-- Section Title -->
+      <div class="section-title">
+        <h2>Featured <span>Tours</span></h2>
+      </div>
+      <!-- End Of Section Title -->
+
+      <!-- Featured Center  -->
+      <div class="section-center featured-center">
+        <!-- Single Tour -->
+        <article class="tour-card">
+          <!-- Tour Image Container -->
+          <div class="tour-image-container">
+            <img
+              src="./images/tour-1.jpeg"
+              alt="tibet-china"
+              class="tour-image"
+            />
+            <p class="tour-date">august 26th, 2022</p>
+          </div>
+          <!-- End of Tour Image Container -->
+
+          <!-- Tour Info -->
+          <div class="tour-info">
+            <h4 class="tour-title">tibet adventure</h4>
+            <p class="tour-text">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis
+              facere, libero natus voluptatum sed voluptates temporibus
+              molestiae non molestias dolor?
+            </p>
+
+            <!-- Tour Footer -->
+            <footer class="tour-footer">
+              <p>
+                <span class="tour-icon">
+                  <i class="fas fa-map fa-fw"></i>
+                </span>
+                china
+              </p>
+              <p>5 days</p>
+              <p>from $2100</p>
+            </footer>
+            <!-- End of Tour Footer -->
+          </div>
+          <!-- End of Tour Info -->
+        </article>
+        <!-- End of Single Tour -->
+
+        <!-- Single Tour -->
+        <article class="tour-card">
+          <!-- Tour Image Container -->
+          <div class="tour-image-container">
+            <img
+              src="./images/tour-2.jpeg"
+              alt="java-indonesia"
+              class="tour-image"
+            />
+            <p class="tour-date">october 1st, 2022</p>
+          </div>
+          <!-- End of Tour Image Container -->
+
+          <!-- Tour Info -->
+          <div class="tour-info">
+            <h4 class="tour-title">best of java</h4>
+            <p class="tour-text">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis
+              facere, libero natus voluptatum sed voluptates temporibus
+              molestiae non molestias dolor?
+            </p>
+
+            <!-- Tour Footer -->
+            <footer class="tour-footer">
+              <p>
+                <span class="tour-icon">
+                  <i class="fas fa-map fa-fw"></i>
+                </span>
+                indonesia
+              </p>
+              <p>11 days</p>
+              <p>from $1400</p>
+            </footer>
+            <!-- End of Tour Footer -->
+          </div>
+          <!-- End of Tour Info -->
+        </article>
+        <!-- End of Single Tour -->
+
+        <!-- Single Tour -->
+        <article class="tour-card">
+          <!-- Tour Image Container -->
+          <div class="tour-image-container">
+            <img
+              src="./images/tour-3.jpeg"
+              alt="hong-kong"
+              class="tour-image"
+            />
+            <p class="tour-date">september 15th, 2022</p>
+          </div>
+          <!-- End of Tour Image Container -->
+
+          <!-- Tour Info -->
+          <div class="tour-info">
+            <h4 class="tour-title">explore hong kong</h4>
+            <p class="tour-text">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis
+              facere, libero natus voluptatum sed voluptates temporibus
+              molestiae non molestias dolor?
+            </p>
+
+            <!-- Tour Footer -->
+            <footer class="tour-footer">
+              <p>
+                <span class="tour-icon">
+                  <i class="fas fa-map fa-fw"></i>
+                </span>
+                hong kong
+              </p>
+              <p>8 days</p>
+              <p>from $5000</p>
+            </footer>
+            <!-- End of Tour Footer -->
+          </div>
+          <!-- End of Tour Info -->
+        </article>
+        <!-- End of Single Tour -->
+
+        <!-- Single Tour -->
+        <article class="tour-card">
+          <!-- Tour Image Container -->
+          <div class="tour-image-container">
+            <img
+              src="./images/tour-4.jpeg"
+              alt="kenya-africa"
+              class="tour-image"
+            />
+            <p class="tour-date">december 5th, 2022</p>
+          </div>
+          <!-- End of Tour Image Container -->
+
+          <!-- Tour Info -->
+          <div class="tour-info">
+            <h4 class="tour-title">kenya highlights</h4>
+            <p class="tour-text">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis
+              facere, libero natus voluptatum sed voluptates temporibus
+              molestiae non molestias dolor?
+            </p>
+
+            <!-- Tour Footer -->
+            <footer class="tour-footer">
+              <p>
+                <span class="tour-icon">
+                  <i class="fas fa-map fa-fw"></i>
+                </span>
+                kenya
+              </p>
+              <p>20 days</p>
+              <p>from $3300</p>
+            </footer>
+            <!-- End of Tour Footer -->
+          </div>
+          <!-- End of Tour Info -->
+        </article>
+        <!-- End of Single Tour -->
+      </div>
+      <!-- End of Featured Center  -->
+    </section>
     <!-- End Of Featured Tours Section -->
 
     <!-- Contact Section -->
