--- a/index.html
+++ b/index.html
@@ -311,6 +311,9 @@
         <!-- End of Single Tour -->
       </div>
       <!-- End of Featured Center  -->
+      <div class="tour-btn">
+        <a href="#" class="btn">all tours</a>
+      </div>
     </section>
     <!-- End Of Featured Tours Section -->
 
