--- a/index.html
+++ b/index.html
@@ -169,7 +169,10 @@
 
           <!-- Tour Info -->
           <div class="tour-info">
-            <h4 class="tour-title">tibet adventure</h4>
+            <div class="tour-title">
+              <h4 class="tour-title">tibet adventure</h4>
+              <p>5 days</p>
+            </div>
             <p class="tour-text">
               Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis
               facere, libero natus voluptatum sed voluptates temporibus
@@ -184,7 +187,6 @@
                 </span>
                 china
               </p>
-              <p>5 days</p>
               <p>from $2100</p>
             </footer>
             <!-- End of Tour Footer -->
