--- a/index.html
+++ b/index.html
@@ -320,7 +320,30 @@
     <!-- End Of Featured Tours Section -->
 
     <!-- Contact Section -->
+    <section class="section contact" id="contact">
+      <!-- Contact Center -->
+      <div class="section-center contact-center">
+        <!-- Contact Title -->
+        <article class="contact-title">
+          <h3>want latest tour info and updates?</h3>
+          <p>sign up for the newsletter and stay up to date</p>
+        </article>
+        <!-- End of Contact Title -->
 
+        <!-- Contact Form -->
+        <form class="contact-form">
+          <input
+            type="email"
+            name="email"
+            class="form-control"
+            placeholder="your email"
+          />
+          <button type="submit" class="submit-btn">submit</button>
+        </form>
+        <!-- End of Contact Form -->
+      </div>
+      <!-- End of Contact Center -->
+    </section>
     <!-- End Of Contact Section -->
 
     <!-- Gallery Section  -->
