--- a/index.html
+++ b/index.html
@@ -347,7 +347,99 @@
     <!-- End Of Contact Section -->
 
     <!-- Gallery Section  -->
+    <section id="gallery">
+      <!-- Gallery Center -->
+      <div class="gallery-center">
+        <!-- Single Item -->
+        <article class="gallery-image-container">
+          <img
+            class="gallery-image"
+            src="./images/tour-1.jpeg"
+            alt="tour-1-image"
+          />
+        </article>
+        <a href="#" class="gallery-icon"><i class="fas fa-search"></i></a>
+        <!-- End of Single Item -->
 
+        <!-- Single Item -->
+        <article class="gallery-image-container">
+          <img
+            class="gallery-image"
+            src="./images/tour-2.jpeg"
+            alt="tour-2-image"
+          />
+        </article>
+        <a href="#" class="gallery-icon"><i class="fas fa-search"></i></a>
+        <!-- End of Single Item -->
+
+        <!-- Single Item -->
+        <article class="gallery-image-container">
+          <img
+            class="gallery-image"
+            src="./images/tour-3.jpeg"
+            alt="tour-3-image"
+          />
+        </article>
+        <a href="#" class="gallery-icon"><i class="fas fa-search"></i></a>
+        <!-- End of Single Item -->
+
+        <!-- Single Item -->
+        <article class="gallery-image-container">
+          <img
+            class="gallery-image"
+            src="./images/tour-4.jpeg"
+            alt="tour-4-image"
+          />
+        </article>
+        <a href="#" class="gallery-icon"><i class="fas fa-search"></i></a>
+        <!-- End of Single Item -->
+
+        <!-- Single Item -->
+        <article class="gallery-image-container">
+          <img
+            class="gallery-image"
+            src="./images/tour-5.jpeg"
+            alt="tour-5-image"
+          />
+        </article>
+        <a href="#" class="gallery-icon"><i class="fas fa-search"></i></a>
+        <!-- End of Single Item -->
+
+        <!-- Single Item -->
+        <article class="gallery-image-container">
+          <img
+            class="gallery-image"
+            src="./images/tour-6.jpeg"
+            alt="tour-6-image"
+          />
+        </article>
+        <a href="#" class="gallery-icon"><i class="fas fa-search"></i></a>
+        <!-- End of Single Item -->
+
+        <!-- Single Item -->
+        <article class="gallery-image-container">
+          <img
+            class="gallery-image"
+            src="./images/tour-7.jpeg"
+            alt="tour-7-image"
+          />
+        </article>
+        <a href="#" class="gallery-icon"><i class="fas fa-search"></i></a>
+        <!-- End of Single Item -->
+
+        <!-- Single Item -->
+        <article class="gallery-image-container">
+          <img
+            class="gallery-image"
+            src="./images/tour-8.jpeg"
+            alt="tour-8-image"
+          />
+        </article>
+        <a href="#" class="gallery-icon"><i class="fas fa-search"></i></a>
+        <!-- End of Single Item -->
+      </div>
+      <!-- End of Gallery Center -->
+    </section>
     <!-- End Of Gallery Section -->
 
     <!-- Footer Section -->
