--- a/index.html
+++ b/index.html
@@ -443,7 +443,77 @@
     <!-- End Of Gallery Section -->
 
     <!-- Footer Section -->
+    <footer class="section footer">
+      <!-- Footer Links -->
+      <ul class="footer-links">
+        <!-- Single Link -->
+        <li>
+          <a href="#home" class="footer-link scroll-link">home</a>
+        </li>
+        <!-- End of Single Link -->
 
+        <!-- Single Link -->
+        <li>
+          <a href="#about" class="footer-link scroll-link">about</a>
+        </li>
+        <!-- End of Single Link -->
+
+        <!-- Single Link -->
+        <li>
+          <a href="#services" class="footer-link scroll-link">services</a>
+        </li>
+        <!-- End of Single Link -->
+
+        <!-- Single Link -->
+        <li>
+          <a href="#featured" class="footer-link scroll-link">featured</a>
+        </li>
+        <!-- End of Single Link -->
+
+        <!-- Single Link -->
+        <li>
+          <a href="#gallery" class="footer-link scroll-link">gallery</a>
+        </li>
+        <!-- End of Single Link -->
+      </ul>
+      <!-- End of Footer Links -->
+
+      <!-- Footer Icons -->
+      <ul class="footer-icons">
+        <!-- Single Icon -->
+        <li>
+          <a href="https://www.facebook.com" target="_blank" class="footer-icon"
+            ><i class="fab fa-facebook"></i
+          ></a>
+        </li>
+        <!-- End of Single Icon -->
+
+        <!-- Single Icon -->
+        <li>
+          <a href="https://www.twitter.com" target="_blank" class="footer-icon"
+            ><i class="fab fa-twitter"></i
+          ></a>
+        </li>
+        <!-- End of Single Icon -->
+
+        <!-- Single Icon -->
+        <li>
+          <a href="https://www.squarespace.com"
+            ><i
+              class="fab fa-squarespace"
+              target="_blank"
+              class="footer-icon"
+            ></i
+          ></a>
+        </li>
+        <!-- End of Single Icon -->
+      </ul>
+      <!-- End of Footer Icons -->
+      <p>
+        copyright &copy; backroads travel tours company <span id="date"></span>.
+        all rights reserved
+      </p>
+    </footer>
     <!-- JS -->
     <script src="./js/app.js"></script>
   </body>
