--- a/index.html
+++ b/index.html
@@ -498,18 +498,14 @@
 
         <!-- Single Icon -->
         <li>
-          <a href="https://www.squarespace.com"
-            ><i
-              class="fab fa-squarespace"
-              target="_blank"
-              class="footer-icon"
-            ></i
+          <a href="https://www.squarespace.com" class="footer-icon"
+            ><i class="fab fa-squarespace" target="_blank"></i
           ></a>
         </li>
         <!-- End of Single Icon -->
       </ul>
       <!-- End of Footer Icons -->
-      <p>
+      <p class="copyright-text">
         copyright &copy; backroads travel tours company <span id="date"></span>.
         all rights reserved
       </p>
