--- a/index.html
+++ b/index.html
@@ -19,6 +19,86 @@
     <!-- Header  -->
     <header id="home">
       <!-- Navbar -->
+      <nav class="navbar">
+        <!-- Nav Center -->
+        <div class="nav-center">
+          <!-- Nav Header -->
+          <div class="nav-header">
+            <img src="./images/logo.svg" alt="logo" class="nav-logo" />
+            <button type="button" class="nav-toggle" id="nav-toggle">
+              <i class="fas fa-bars"></i>
+            </button>
+          </div>
+          <!-- End of Nav Header -->
+
+          <!-- Nav Links -->
+          <ul class="nav-links" id="nav-links">
+            <!-- Single Link -->
+            <li>
+              <a href="#home" class="nav-link scroll-link">home</a>
+            </li>
+            <!-- End of Single Link -->
+
+            <!-- Single Link -->
+            <li>
+              <a href="#about" class="nav-link scroll-link">about</a>
+            </li>
+            <!-- End of Single Link -->
+
+            <!-- Single Link -->
+            <li>
+              <a href="#services" class="nav-link scroll-link">services</a>
+            </li>
+            <!-- End of Single Link -->
+
+            <!-- Single Link -->
+            <li>
+              <a href="#featured" class="nav-link scroll-link">featured</a>
+            </li>
+            <!-- End of Single Link -->
+
+            <!-- Single Link -->
+            <li>
+              <a href="#gallery" class="nav-link scroll-link">gallery</a>
+            </li>
+            <!-- End of Single Link -->
+          </ul>
+          <!-- End of Nav Links -->
+
+          <!-- Nav Icons -->
+          <ul class="nav-icons">
+            <!-- Single Icon -->
+            <li>
+              <a
+                href="https://www.facebook.com"
+                target="_blank"
+                class="nav-icon"
+                ><i class="fab fa-facebook"></i
+              ></a>
+            </li>
+            <!-- End of Single Icon -->
+
+            <!-- Single Icon -->
+            <li>
+              <a href="https://www.twitter.com" target="_blank" class="nav-icon"
+                ><i class="fab fa-twitter"></i
+              ></a>
+            </li>
+            <!-- End of Single Icon -->
+
+            <!-- Single Icon -->
+            <li>
+              <a href="https://www.squarespace.com" class="nav-icon"
+                ><i class="fab fa-squarespace" target="_blank"></i
+              ></a>
+            </li>
+            <!-- End of Single Icon -->
+          </ul>
+          <!-- End of Nav Icons -->
+        </div>
+        <!-- End of Nav Center -->
+      </nav>
+      <!-- End of Navbar -->
 
       <!-- Hero -->
       <div class="hero">
